# ref-sample-data

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  registry.txt  ruff.toml  towncrier.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/actions/regenerate/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci.yaml  pr-comment.yaml  regenerate-sample-data.yaml  release.yaml
changelog/: 1.bug.md  11.feature.md  12.feature.md  13.feature.md  14.feature.md  16.feature.md  17.trivial.md  18.feature.md  19.fix.md  2.breaking.md  3.fix.md  4.feature.md  5.breaking.md  7.feature.md  8.fix.md
data/CMIP/CSIRO/ACCESS-ESM1-5/historical/r1i1p1f1/Amon/rsdt/gn/v20191115/: rsdt_Amon_ACCESS-ESM1-5_historical_r1i1p1f1_gn_185001-201412.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/1pctCO2/r1i1p1f1/Amon/tas/gn/v20191115/: tas_Amon_ACCESS-ESM1-5_1pctCO2_r1i1p1f1_gn_010101-018012.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/1pctCO2/r1i1p1f1/fx/areacella/gn/v20191115/: areacella_fx_ACCESS-ESM1-5_1pctCO2_r1i1p1f1_gn.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/abrupt-4xCO2/r1i1p1f1/Amon/rlut/gn/v20191115/: rlut_Amon_ACCESS-ESM1-5_abrupt-4xCO2_r1i1p1f1_gn_010101-012512.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/abrupt-4xCO2/r1i1p1f1/Amon/rsdt/gn/v20191115/: rsdt_Amon_ACCESS-ESM1-5_abrupt-4xCO2_r1i1p1f1_gn_010101-012512.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/abrupt-4xCO2/r1i1p1f1/Amon/rsut/gn/v20191115/: rsut_Amon_ACCESS-ESM1-5_abrupt-4xCO2_r1i1p1f1_gn_010101-012512.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/abrupt-4xCO2/r1i1p1f1/Amon/tas/gn/v20191115/: tas_Amon_ACCESS-ESM1-5_abrupt-4xCO2_r1i1p1f1_gn_010101-012512.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/abrupt-4xCO2/r1i1p1f1/fx/areacella/gn/v20191115/: areacella_fx_ACCESS-ESM1-5_abrupt-4xCO2_r1i1p1f1_gn.nc
data/CMIP6/CMIP/CSIRO/ACCESS-ESM1-5/historical/r1i1p1f1/Amon/pr/gn/v20191115/: pr_Amon_ACCESS-ESM1-5_historical_r1i1p1f1_gn_200001-201412.nc
data/ScenarioMIP/CSIRO/ACCESS-ESM1-5/ssp126/r1i1p1f1/Amon/rsdt/gn/v20210318/: rsdt_Amon_ACCESS-ESM1-5_ssp126_r1i1p1f1_gn_210101-230012.nc
data/ScenarioMIP/CSIRO/ACCESS-ESM1-5/ssp126/r1i1p1f1/Amon/tas/gn/v20191115/: tas_Amon_ACCESS-ESM1-5_ssp126_r1i1p1f1_gn_201501-210012.nc
data/obs4MIPs/NASA-JPL/AIRS-2-1/ta/gn/v20201110/: taNobs_AIRS-2-1_gn_200209-201609.nc  taStderr_AIRS-2-1_gn_200209-201609.nc  ta_AIRS-2-1_gn_200209-201609.nc
scripts/: fetch_test_data.py  sample_dataset_request.py
src/ref_sample_data/: __init__.py  resample.py
src/ref_sample_data/data_request/: __init__.py  base.py  cmip6.py  obs4mips.py
src/sample_data/: __init__.py
src/sample_data/data_request/: base.py  cmip6.py  obs4mips.py
(+42 files in other folders)
